# ProjetoGit

./: .gitmodules  .pre-commit-config.yaml  Gerador de senhas.py  Q01.py  Q02.py  Q03.py  Q04.py  Q05.py  Q07.py  Q08.py  Q09.py  Q10.py  Q11.py  Q12.py  Q13.py  Q14.py  Q15.py  Q16.py  Q17.py  Q18.py  Readme.md  cotacao_dolar.py  jogo-da-velha.py  projeto.py  pyproject.toml  token.txt
pkg/: pyproject.toml
pkg/tests/: test_pkg.py
