[tool.poetry]
name = "pkg"
version = "0.0.0.post13.dev0+498b7a6"
description = "Teste"
authors = ["Walber Florencio <walberfa@gmail.com>"]
repository = "https://github.com/walberfa/ProjetoGit"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry-dynamic-versioning]
enable = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"