[tool.poetry]
name = "pkg"
version = "0.0.0.post15.dev0+abc2e3c"
description = "Teste"
authors = ["Walber Florencio <walberfa@gmail.com>"]
repository = "https://github.com/walberfa/ProjetoGit"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"